    -- Don't check for a vhost twiddle request_uri if twiddling hasn't been
       configured, so that /__using/... uris aren't needlessly appropriated.
       (Jason Stubbs <jasonbstubbs@gmail.com>)

    -- Fix handling of a www.exammple.com.:80 type host header in the vhost
       plugin (Jason Stubbs <jasonbstubbs@gmail.com>)

    -- Do vhost twiddling after all host header cleanups in order to standardize
       with regular vhost configuration (Jason Stubbs <jasonbstubbs@gmail.com>)

    -- Force keepalives off when we haven't finished reading a request body, but we
       are already sending a response. (Jonathan Steinert <hachi@kuiki.net>)

    -- Add support for Content-MD5 checking on PUT requests to web server services.
       (Eric Wong <normalperson@yhbt.net>)

    -- Include an XFFExtras plugin that can add X-Forwarded-Port and X-Forwarded-Proto
       headers to help proxy backends construct canonical URLs with less configuration.
       (RT 60260) (Jonathan Steinert <hachi@kuiki.net>)

    -- Fix perlbal-check's age calculation to get the maximum age of queues across all
       Perlbals. (Abe Hassan <ahassan@saymedia.com>)

    -- Add DEFAULT command to allow setting default values for later service tunables
       (Mark Smith <mark@qq.is>)

    -- Change IO::Socket::SSL version requirement error to reflect what we actually
       require. (Jonathan Steinert <hachi@kuiki.net>)

    -- Completely redo the deps list for perlbal. This addresses an issue exposed when
       LWP was split into component modules (RT 68490) , plus other subtle issues we've
       been ignoring or unaware of. (Jonathan Steinert <hachi@kuiki.net>)

    -- Stop loading Storable, we don't use it (Jonathan Steinert <hachi@kuiki.net>)

    -- Switch Devel::Peek to an optional requirement (Jonathan Steinert <hachi@kuiki.net>)

    -- Change perlbal-check to use IO::Socket::INET, not just IO::Socket
       (Jonathan Steinert <hachi@kuiki.net>)
