@@ -1,3 +1,6 @@
+    -- Return an error rather than silently continuing when a vhost maps to a
+       service that doesn't exist. (Jason Stubbs <jasonbstubbs@gmail.com>)
+
     -- Don't check for a vhost twiddle request_uri if twiddling hasn't been
        configured, so that /__using/... uris aren't needlessly appropriated.
        (Jason Stubbs <jasonbstubbs@gmail.com>)
